# xpadf

./: Makefile.am  configure.ac
examples/chat/: protocol.h  tclient.c  tserver.c
include/xpadf/common/: macros.h  objects.h  status.h  types.h
include/xpadf/common/gcc/: macros.h  types.h
include/xpadf/io/: io.h  iopoller.h  socket.h  stdio.h  tsocket.h
include/xpadf/sync/: locks.h
include/xpadf/thread/: looper.h  thread.h  tpool.h
src/include/xpadf/internal/common/: objects.h
src/include/xpadf/internal/posix/io/: epollip.h  io.h  iopoller.h  socket.h
src/include/xpadf/internal/posix/sync/: locks.h
src/include/xpadf/internal/posix/thread/: looper.h  thread.h  tpool.h
src/posix/common/: objects.c  status.c
src/posix/io/: epollip.c  io.c  socket.c
src/posix/sync/: locks.c
src/posix/thread/: looper.c  thread.c  tpool.c
